--- a/www/css/stylesheet.css
+++ b/www/css/stylesheet.css
@@ -156,3 +156,38 @@ table input[type="text"] {
     position: fixed;
     top: -1000px;
 }
+
+
+
+
+
+/*Loader Stuff*/
+#loader
+{
+    position: fixed;
+    left: 10px;
+    top:10px;
+    display: none;
+}
+.loader {
+  
+
+  border: 6px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 6px solid #3498db;
+  width: 20px;
+  height: 20px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
